# FapiGo

./: .env.example  .gitignore  alembic.ini  init_db.py  main.py  pyproject.toml  run.bat
alembic/: env.py
app/: main.py
app/api/: router.py
app/api/endpoints/: auth.py  users.py
app/core/: config.py  database.py  deps.py  security.py
app/models/: user.py
app/schemas/: user.py
script/: migrate.sh
