[project]
name = "guji"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.119.0",
    "uvicorn[standard]>=0.38.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "alembic>=1.13.0",
    "python-dotenv>=1.0.0",
    "email-validator>=2.0.0",
    "requests>=2.32.5",
    "bcrypt>=5.0.0",
    "httpx>=0.28.1",
    "easyocr>=1.7.2",
]
